# rust-os

./: Cargo.toml
src/: gdt.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
