[package]
name = "rust-os"
version = "0.1.0"
edition = "2018"
author = ["Duc Huong Nguyen <duchuong007@gmail.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
